Prevent horizontal scrollbars for chat

--- a/bigbluebutton-html5/app/client/stylesheets/chat.less
+++ b/bigbluebutton-html5/app/client/stylesheets/chat.less
@@ -111,6 +111,9 @@
   }
 }
 #chatbody {
+    // text will not be hidden as it won't exceed the container boundaries,
+    // but the element will still be given horizontal scroll bars
+    overflow-x: hidden;
   @media @desktop-portrait, @landscape {
     order: 2;
     -webkit-order: 2;
